changes in profile

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,48 +45,66 @@
             <ul class="cards-list">
                 <li class="cards-item">
                     <img src="./images/portfolio/img (9).jpg" alt="">
-                    <h3 class="cards-title">Технокряк</h3>
-                    <p class="cards-text">Веб-сайти</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Технокряк</h3>
+                        <p class="cards-text">Веб-сайти</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (1) (1).jpg" alt="">
-                    <h3 class="cards-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="cards-text">Дизайн</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Постер New Orlean vs Golden Star</h3>
+                        <p class="cards-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (2) (1).jpg" alt="">
-                    <h3 class="cards-title">Ресторан Seafood</h3>
-                    <p class="cards-text">Приложение</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Ресторан Seafood</h3>
+                        <p class="cards-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (3) (1).jpg" alt="">
-                    <h3 class="cards-title">Проект Prime</h3>
-                    <p class="cards-text">Маркетинг</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Проект Prime</h3>
+                        <p class="cards-text">Маркетинг</p>
+                    </div>
                 </li>    
                 <li class="cards-item">
                     <img src="./images/portfolio/img (4) (1).jpg" alt="">
-                    <h3 class="cards-title">Проект Boxes</h3>
-                    <p class="cards-text">Приложение</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Проект Boxes</h3>
+                        <p class="cards-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (5) (1).jpg" alt="">
-                    <h3 class="cards-title">Inspiration has no Borders</h3>
-                    <p class="cards-text">Веб-сайт</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Inspiration has no Borders</h3>
+                        <p class="cards-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (6) (1).jpg" alt="">
-                    <h3 class="cards-title">Издание Limited Emited Edition</h3>
-                    <p class="cards-text">Дизайн</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Издание Limited Emited Edition</h3>
+                        <p class="cards-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (7) (1).jpg" alt="">
-                    <h3 class="cards-title">Проект LAB</h3>
-                    <p class="cards-text">Маркетинг</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Проект LAB</h3>
+                        <p class="cards-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="cards-item">
                     <img src="./images/portfolio/img (8) (1).jpg" alt="">
-                    <h3 class="cards-title">Growing Business</h3>
-                    <p class="cards-text">Приложение</p>
+                    <div class="cards-description">
+                        <h3 class="cards-title">Growing Business</h3>
+                        <p class="cards-text">Приложение</p>
+                    </div>
                 </li>
             </ul>
            </div>
