--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <section class="hero">
-            <div class="container">
+                      <div class="container">
                 <h1 class="title-hero">Эффективные решения <br> для вашего бизнеса</h1>
             <a href="#" class="hero-button">Заказать услугу</a>
             </div>
@@ -72,6 +72,8 @@
                     </p>
                 </li>
             </ul>
+        </section>
+        <section class="function">
             <h2 class="function-title">Чем мы занимаемся</h2>
             <ul class="function-list">
                 <li class="function-item">
