fonts in Portfolio, borders in cards

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </ul>
         </section>
         <section class="function">
+            <div class="container">
             <h2 class="function-title">Чем мы занимаемся</h2>
             <ul class="function-list">
                 <li class="function-item">
